--- a/frontend/trello-gui/src/components/Card/Card.module.scss
+++ b/frontend/trello-gui/src/components/Card/Card.module.scss
@@ -1,11 +1,12 @@
-.preventive{
+.preventive {
     height: 100%;
 }
 .button_menu {
     position: relative;
     top: 30px;
     z-index: 99;
-    left: 90px;
+    left: 202px;
+    width: 1px;
 }
 .wrapper {
     position: relative;
@@ -32,12 +33,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    cursor: pointer;
 }
 .title {
     font-size: 17px;
     font-weight: bold;
-    margin-left: 10px;
+    margin-left: 20px;
     color: white;
+    cursor: pointer;
 }
 .list-card {
     width: 100%;
@@ -72,11 +75,13 @@
 .footer {
     top: 30px;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
-    height: var(--footer-card);
-    padding-bottom: 20px;
-    padding-top: 25px;
+    min-height: var(--footer-card); /* chiều cao tối thiểu */
+    padding-bottom: 7px;
+    padding-top: 10px;
+    gap: 15px;
+    max-height: 100px;
 }
 // icon
 .icon-dropDown {
@@ -94,6 +99,7 @@
 }
 .button-add {
     display: flex;
+    width: 90%;
     gap: 0;
     color: white;
     & > :first-child {
@@ -101,4 +107,103 @@
         margin: 0;
         padding: 0;
     }
+    margin-left: 10px;
+    height: 32px;
+}
+.button-add:hover {
+    background-color: #5bb7ae;
+}
+// input-add-title
+.input-add-title {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap  : 10px;
+}
+.wrapper-button-add-column2 {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-left: 10px;
+}
+// css cho input add column ( input search )
+.label-search {
+    position: absolute;
+    z-index: 1;
+    top: 0px;
+    left: 16px;
+    font-size: 14px;
+    background: var(--color-green);
+    padding: 0 6px;
+    color: #fff;
+    pointer-events: none;
+    transition: all 0.3s ease;
+    opacity: 0;
+    transform: translateY(5px) scale(0.85);
+}
+.searchInput {
+    margin-left: 10px;
+    margin-top: 8px;
+    height: 32px;
+    width: 217px;
+    border: 2px solid #fff;
+    border-radius: 4px;
+    font-size: 13px;
+    padding: 0 8px;
+    color: #fff;
+    font-weight: 500;
+
+    &::placeholder {
+        color: #fff; /* placeholder trắng mặc định */
+        font-size: 14px;
+    }
+    &:hover {
+        border: 2px solid #fff;
+    }
+    &:focus + .label-search {
+        opacity: 1;
+        top: 1px;
+        font-size: 12px;
+        font-weight: 600;
+        transform: translateY(0) scale(1);
+    }
+    &:focus::placeholder {
+        color: #fff;
+    }
+}
+// button có padding thì margin tùy chỉnh
+.padding-button {
+    margin-top: 4px;
+}
+
+// button-add-column
+.button-add-column2 {
+    background-color: #ffe081;
+    color: #fff;
+    /* Box shadow */
+    box-shadow: 0 4px 6px rgba(54, 54, 50, 0.2);
+    transition: box-shadow 0.3s ease;
+    width: 100px;
+    display: flex;
+    justify-content: flex-start;
+    white-space: nowrap;
+}
+.button-add-column2:hover {
+    background-color: #f7db85;
+}
+.icon2 {
+    width: 18px;
+    color: rgb(255, 255, 255);
+}
+.icon2:hover {
+    color: rgb(205, 205, 205);
+}
+
+// css focus cho add column
+.searchInput.hasValue + .label-search {
+    opacity: 1;
+    top: 1px;
+    font-size: 12px;
+    font-weight: 600;
+    transform: translateY(0) scale(1);
 }
