--- a/frontend/trello-gui/src/components/GlobalAppStyle/GlobalAppStyle.module.scss
+++ b/frontend/trello-gui/src/components/GlobalAppStyle/GlobalAppStyle.module.scss
@@ -65,3 +65,20 @@ html *::-webkit-scrollbar-track {
     font-size: 13px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
+
+/* React-Toastify custom */
+/* Custom React-Toastify */
+:global(.Toastify__toast) {
+  font-size: 14px !important;
+  padding: 6px 12px !important;
+  min-height: 40px !important;
+  width: auto !important;        /* co theo nội dung */
+  min-width: 240px !important;   /* giữ tối thiểu */
+  max-width: none !important;    /* bỏ giới hạn chiều dài */
+}
+
+:global(.Toastify__toast-body) {
+  margin: 0 !important;
+  flex: unset !important;
+  white-space: normal !important; /* cho phép xuống dòng nếu nội dung dài */
+}
