--- a/frontend/trello-gui/src/components/Card/CardItem/CardItem.module.scss
+++ b/frontend/trello-gui/src/components/Card/CardItem/CardItem.module.scss
@@ -9,7 +9,9 @@
     display: flex;
     flex-direction: column;
     padding-bottom: 10px;
+    cursor: pointer;
 }
+
 .image {
     width: 100%;
     height: auto;
