--- a/frontend/trello-gui/src/components/MenuDropDownCustom/MenuDropDownCustomItem/MenuDropDownCustomItem.module.scss
+++ b/frontend/trello-gui/src/components/MenuDropDownCustom/MenuDropDownCustomItem/MenuDropDownCustomItem.module.scss
@@ -1,17 +1,27 @@
 .wrapper {
     height: 40px;
     width: 100%;
+    z-index: 999;
 }
 .wrapper:hover {
     background-color: #e6e5ea;
 }
 .buttonItem {
-    width: max-content;
+    width: 100%;
     font-weight: 300;
     padding-right: 50px;
     font-size: 14px;
     color: #585561;
 }
+
+.buttonLabel {
+    flex: 1;                 /* chiếm hết không gian còn lại */
+    text-align: left;        /* chữ sát trái */
+    white-space: nowrap;     /* không cho xuống dòng */
+    overflow: hidden;        /* ẩn phần dư */
+    text-overflow: ellipsis; /* hiển thị ... nếu chữ dài quá */
+}
+
 // icon
 .icon {
     width: 18px;
