--- a/frontend/trello-gui/src/components/Card/CardItem/CardItem.module.scss
+++ b/frontend/trello-gui/src/components/Card/CardItem/CardItem.module.scss
@@ -24,6 +24,7 @@
     padding-right: 10px;
     word-wrap: break-word;
     overflow-wrap: break-word;
+    font-family: 'Times New Roman', Times, serif;
 }
 .footer {
     margin-top: 10px;
