--- a/frontend/trello-gui/src/pages/Settings/AccountTab/AccountTab.module.scss
+++ b/frontend/trello-gui/src/pages/Settings/AccountTab/AccountTab.module.scss
@@ -42,6 +42,13 @@
     height: 55px;
     border-radius: 999px;
 }
+.user-icon2 {
+    color: white;
+    background-color: #bab9c7;
+    width: 70px;
+    height: 70px;
+    border-radius: 999px;
+}
 .user-name {
     display: flex;
     flex-direction: column;
