--- a/frontend/trello-gui/src/pages/Boards/CreateBoard.module.scss
+++ b/frontend/trello-gui/src/pages/Boards/CreateBoard.module.scss
@@ -90,6 +90,10 @@
     margin-left: 15px;
     font-size: 12px;
     color: rgba(120, 117, 117, 0.904);
+     width: 88%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .btn-goto-board {
     width: 110px !important;
