--- a/frontend/trello-gui/src/components/AvatarGroup/AvatarGroup.module.scss
+++ b/frontend/trello-gui/src/components/AvatarGroup/AvatarGroup.module.scss
@@ -6,6 +6,7 @@
 }
 .avatar-visible {
     width: 34px;
+    height: 34px;
     border-radius: 999px;
     object-fit: cover;
     margin-left: -5px;
@@ -22,11 +23,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
+    color: white !important;
     margin-left: -5px;
     font-size: 13px;
 }
 .hidePosition {
     position: absolute;
     right: 1px;
+}
+.buttonDropDown {
+    color: azure !important;
 }
