--- a/frontend/trello-gui/src/components/Card/CardItem/CardItem.module.scss
+++ b/frontend/trello-gui/src/components/Card/CardItem/CardItem.module.scss
@@ -5,17 +5,21 @@
 .wrapper {
     width: 93%;
     border-radius: 6px;
-    background-color: azure !important;
+    background-color: #fcfcfc !important; /* hoặc #fafafa */
     display: flex;
     flex-direction: column;
     padding-bottom: 10px;
     cursor: pointer;
 }
-
+.wrapper:hover {
+    box-shadow: 0 1px 5px rgba(201, 23, 192, 0.879);
+}
 .image {
     width: 100%;
     height: auto;
     object-fit: cover;
+    border-top-left-radius: 5px;
+    border-top-right-radius : 5px;
 }
 .content {
     margin-top: 12px;
