--- a/frontend/trello-gui/src/components/GlobalAppStyle/GlobalAppStyle.module.scss
+++ b/frontend/trello-gui/src/components/GlobalAppStyle/GlobalAppStyle.module.scss
@@ -8,6 +8,7 @@
     --footer-card: 40px;
     // column
     --menu-height-column: 1px;
+    --color-gray : rgba(128, 121, 121, 0.708)
 }
 /* Áp box-sizing cho mọi phần tử và cả pseudo-elements */
 *,
@@ -60,14 +61,15 @@ html *::-webkit-scrollbar-track {
     border-radius: 0;
     background-color: rgba(0, 0, 0, 0);
 }
-.tippy-box {
-    background-color: #333 !important;
-    color: rgb(0, 0, 0) !important;
-    padding: 6px 10px;
-    border-radius: 4px;
-    font-size: 13px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+:global(.tippy-box) {
+  background-color: #333 !important;
+  color: white !important;
+  padding: 2px 5px;
+  border-radius: 4px;
+  font-size: 13px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
+
 
 /* React-Toastify custom */
 /* Custom React-Toastify */
@@ -94,3 +96,4 @@ html *::-webkit-scrollbar-track {
     aria-hidden: false !important;
 }
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
