--- a/frontend/trello-gui/src/components/MenuDropDownCustom/MenuDropDownCustom.module.scss
+++ b/frontend/trello-gui/src/components/MenuDropDownCustom/MenuDropDownCustom.module.scss
@@ -33,3 +33,9 @@
     pointer-events: auto;
     background-color: rgb(255, 255, 255);
 }
+.avatarGroups {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr); /* 4 cột */
+    gap: 8px; /* khoảng cách giữa các ảnh */
+    padding: 10px;
+}
