--- a/frontend/trello-gui/src/components/MenuDropDownCustom/MenuDropDownCustomItem/MenuDropDownCustomItem.module.scss
+++ b/frontend/trello-gui/src/components/MenuDropDownCustom/MenuDropDownCustomItem/MenuDropDownCustomItem.module.scss
@@ -2,8 +2,8 @@
     height: 40px;
     width: 100%;
     z-index: 999;
+    padding-right: 5px;
 }
-
 .buttonItem {
     width: 100%;
     font-weight: 300;
@@ -13,10 +13,10 @@
 }
 
 .buttonLabel {
-    flex: 1;                 /* chiếm hết không gian còn lại */
-    text-align: left;        /* chữ sát trái */
-    white-space: nowrap;     /* không cho xuống dòng */
-    overflow: hidden;        /* ẩn phần dư */
+    flex: 1; /* chiếm hết không gian còn lại */
+    text-align: left; /* chữ sát trái */
+    white-space: nowrap; /* không cho xuống dòng */
+    overflow: hidden; /* ẩn phần dư */
     text-overflow: ellipsis; /* hiển thị ... nếu chữ dài quá */
 }
 
@@ -25,4 +25,24 @@
     width: 18px;
     color: #585561;
     margin-right: 8px;
+}
+.avatar {
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+    border-radius: 999px;
+    z-index: 998;
+}
+.iconMemberAvatarGroup {
+    width: 20px;
+    height: 20px;
+    color: #00B951;
+    position: absolute;
+    bottom: -4px; /* hoặc top: 0; tuỳ bạn muốn icon nằm đâu */
+    right: -8px;
+}
+// Tippy Css
+.avatar-wrapper {
+    position: relative;
+  
 }
