Add Card Comment, Invite User to Board by Email ,  Tính năng Notifications - Query Invitation theo User…  ,   Update Board Invitation, tính năng Real-time Socket thời gian thực
 Hoàn thiện tính năng cho người dùng Comment vào trong Card, cách thêm dữ liệu comment vào trong Database và lấy ra sao cho phù hợp, comment mới nhất hiện lên đầu…vv
👉 Ghép giao diện phần Invite người dùng vào một cái Board theo Email.
👉 Triển khai Model Invitations để lưu trữ thông tin, phục vụ tính năng Notifications và thông báo Real-time thời gian thực về sau…vv

Ghép giao diện phần Design Notification Dropdown vào giao diện phần quả chuông thông báo.
👉 Viết API lấy danh sách Notifications, là các lời mời Invitations của một User cụ thể.
👉 Lưu trữ thông tin Notifications vào trong Redux và ghép đúng chuẩn thông tin vào giao diện, các hành động Accept, Reject lời mời…vv

👉 Viết API cập nhật một cái Invitation cụ thể để User thực hiện Accept hoặc Reject lời mời Join Board.
👉 Cấu hình Socket cả 2 phía Front-end lẫn Back-end.
👉 Triển khai việc emit sự kiện Real-time thời gian thực tới User khi có một lời mời/thông báo gửi đến.

--- a/frontend/trello-gui/src/components/Modal/ActiveCard/CardActivitySection.module.scss
+++ b/frontend/trello-gui/src/components/Modal/ActiveCard/CardActivitySection.module.scss
@@ -15,11 +15,11 @@
     border-radius: 999px;
 }
 .hearder > input {
-    border: 0.5px solid rgba(118, 111, 111, 0.427);
+    border: 0.5px solid rgba(75, 67, 67, 0.427);
     border-radius: 5px;
     flex: 1;
     padding-left: 10px;
-    color: var(--color-gray);
+    color: rgba(27, 25, 25, 0.858);
 }
 .content {
     display: flex;
@@ -30,7 +30,7 @@
 .content > p {
     margin-left: 8%;
     font-size: 13px;
-    color: var(--color-gray);
+    color: rgba(27, 25, 25, 0.858);
 }
 .contentActivity {
     display: flex;
